# hop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  jest.config.js  manifest.ts  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
.github/workflows/: Deploy.yml
assets/static/: base.css  disambiguate.html  index.css  index.html  opensearch.xml
src/: files.rs  globals.rs  hops.rs  index.test.ts  index.ts  lib.rs  utils.rs
src/handler/: macros.rs  mod.rs
src/hoppers/: mod.rs  rules.rs
src/hoppers/rules/: baidu.rs  cloudflare.rs  github.rs  githubcodesearch.rs  google.rs  googlescholar.rs  hop.rs  leetcode.rs  linkedin.rs  links.rs  ln.rs  merriamwebster.rs  oeis.rs  overleaf.rs  wikipedia.rs  wolframalpha.rs  youtube.rs
src/static/: index.html  opensearch.xml
src/utils/: constants.ts  handler.ts  hoppers.ts  testing.ts  types.ts
src/utils/hoppers/: code.ts  entertainment.ts  google.ts  math.ts  reference.ts  social.ts  tracking.ts
tests/: hop.rs  macros.rs
